cabal-version:      3.4
name:               binder
version:            0.0.0.0
synopsis:           Variable binding for abstract syntax tree
description:
    binder is purely functional implementation of Ocaml's bindlib.
    <https://github.com/rlepigre/ocaml-bindlib>
    It follows the style of higher-order abstract syntax,
    and offers the representation of abstract syntax tree.
license:            MIT
license-file:       LICENSE
author:             Keito Kajitani
maintainer:         ijaketak@gmail.com
copyright:          (c) 2023 Keito Kajitani
homepage:           https://github.com/ijaketak/binder
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:
      GHC == 9.2.8
    , GHC == 9.4.7
    , GHC == 9.6.3
-- extra-source-files:

source-repository head
  type:     git
  location: https://github.com/ijaketak/binder

source-repository this
  type:     git
  location: https://github.com/ijaketak/binder
  tag:      0.0.0.0

common depends
    build-depends:
          containers < 0.8
        , text < 2.2
        , transformers < 0.7

common warnings
    ghc-options: -Wall

library
    import:           depends, warnings
    exposed-modules:
          Data.Binder
    -- other-modules:
    -- other-extensions:
    build-depends:
          base < 4.19
        , lens < 5.3
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite binder-test
    import:           depends, warnings
    default-language: Haskell2010
    other-modules:
          Binder1Spec
        , Binder2Spec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
          base < 4.19
        , binder
        , hspec < 2.12
    build-tool-depends: hspec-discover:hspec-discover
